--- a/package.json
+++ b/package.json
@@ -1,44 +1,46 @@
 {
   "name": "ibsys2",
   "version": "1.0.0",
-  "description": "",
+  "description": "Ibsys2 PPS Tool",
   "main": "index.js",
   "engines": {
     "node": "4.2.1"
   },
-  "scripts": {
-    "babel": "babel src --out-dir lib",
-    "babel:w": "babel -w src --out-dir lib",
-    "webpack": "webpack",
-    "webpack:w": "webpack --watch",
-    "postinstall": "npm run babel && npm run webpack",
-    "start": "node lib/app"
-  },
-  "author": "",
-  "license": "",
+  "author": "YPPJ",
+  "license": "ISC",
   "dependencies": {
-    "angular2": "^2.0.0-beta.17",
-    "babel-cli": "^6.16.0",
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.16.0",
-    "body-parser": "^1.15.2",
-    "bootstrap": "*",
-    "css-loader": "^0.25.0",
-    "es6-promise": "^4.0.5",
-    "es6-shim": "*",
-    "express": "^4.14.0",
-    "file-loader": "^0.9.0",
-    "jade": "^1.11.0",
-    "method-override": "^2.3.6",
-    "mongoose": "^4.6.4",
-    "morgan": "^1.7.0",
-    "reflect-metadata": "*",
-    "rxjs": "^5.0.0-rc.1",
-    "script-loader": "^0.7.0",
-    "style-loader": "^0.13.1",
-    "systemjs": "*",
-    "webpack": "^1.13.2",
-    "zone.js": "*"
-  }
+    "@angular/common": "~2.1.0",
+    "@angular/compiler": "~2.1.0",
+    "@angular/core": "~2.1.0",
+    "@angular/forms": "~2.1.0",
+    "@angular/http": "~2.1.0",
+    "@angular/platform-browser": "~2.1.0",
+    "@angular/platform-browser-dynamic": "~2.1.0",
+    "@angular/router": "~3.1.0",
+    "@angular/upgrade": "~2.1.0",
+    "angular-in-memory-web-api": "~0.1.5",
+    "bootstrap": "^3.3.7",
+    "core-js": "^2.4.1",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "5.0.0-beta.12",
+    "systemjs": "0.19.39",
+    "zone.js": "^0.6.25"
+  },
+  "devDependencies": {
+    "concurrently": "^3.0.0",
+    "lite-server": "^2.2.2",
+    "typescript": "^2.0.3",
+    "typings": "^1.4.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/StPatrick90/IBSYS2.git"
+  },
+  "bugs": {
+    "url": "https://github.com/StPatrick90/IBSYS2/issues"
+  },
+  "homepage": "https://github.com/StPatrick90/IBSYS2#readme"
 }
