--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "body-parser": "^1.15.2",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
-    "mongojs": "^2.4.0"
+    "fs": "0.0.1-security",
+    "mongojs": "^2.4.0",
+    "multer": "^1.2.0"
   }
 }
