--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.39",
+    "xml2json": "^0.10.0",
     "zone.js": "^0.6.25"
   },
   "devDependencies": {
