--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.15.2",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
-    "mongojs": "^2.4.0"
+    "mongojs": "^2.4.0",
+    "xml2json": "^0.10.0"
   }
 }
