--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "~3.1.0",
     "@angular/upgrade": "~2.1.0",
     "angular-in-memory-web-api": "~0.1.5",
+    "angular2-localstorage": "^0.4.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "font-awesome": "^4.6.3",
