--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "font-awesome": "^4.6.3",
     "jquery": "^3.1.1",
     "ng2-bs3-modal": "^0.10.4",
+    "ng2-dnd": "^2.0.1",
     "rdash-ui": "^1.0.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
