--- a/client/package.json
+++ b/client/package.json
@@ -28,10 +28,12 @@
     "angular-2-dropdown-multiselect": "0.3.1",
     "angular2-localstorage": "^0.4.0",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.4.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.6.3",
     "jquery": "^3.1.1",
     "ng2-bs3-modal": "^0.10.4",
+    "ng2-charts": "^1.4.4",
     "ng2-dnd": "^2.0.1",
     "rdash-ui": "^1.0.1",
     "reflect-metadata": "^0.1.8",
