--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
   },
   "homepage": "https://github.com/StPatrick90/IBSYS2#readme",
   "dependencies": {
+    "@angular/core": "^2.4.1",
     "body-parser": "^1.15.2",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "mongojs": "^2.4.0",
-    "xml2json": "^0.10.0"
+    "ng2-dropdown": "0.0.21",
+    "rxjs": "^5.0.2",
+    "xml2json": "^0.10.0",
+    "zone.js": "^0.7.4"
   }
 }
