--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.15.2",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
+    "json2xml": "^0.1.3",
     "mongojs": "^2.4.0",
     "ng2-dropdown": "0.0.21",
     "rxjs": "^5.0.2",
