--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^3.3.7",
     "chart.js": "^2.4.0",
     "core-js": "^2.4.1",
+    "file-saver": "^1.3.3",
     "font-awesome": "^4.6.3",
     "jquery": "^3.1.1",
     "ng2-bs3-modal": "^0.10.4",
